# oreilly_olt_templates

Solutions/: CMakeLists.txt
Solutions/2_Templates/: CMakeLists.txt
Solutions/2_Templates/Class_Templates/: CMakeLists.txt  FixedVector1.cpp  IsConst1.cpp  IsPointer1.cpp  Makefile  RemoveConst1.cpp  Span.h  UniquePtr1.cpp  Vector1.cpp  Vector2.cpp
Solutions/2_Templates/Concepts/: AssociativeContainer.cpp  CMakeLists.txt  Constraints2.cpp  IsPalindrome_Concepts.cpp  Makefile  Max_Concept.cpp  NarrowConversion2.cpp  Optional_Cpp20.cpp  Optional_Trivial_1.cpp  SequenceContainer.cpp  Sign2.cpp  UniquePtr_Concepts.cpp
Solutions/2_Templates/Function_Templates/: Accumulate.cpp  ArraySize.cpp  CMakeLists.txt  Compare.cpp  Find.cpp  Makefile  Max.cpp  MinMax.cpp
Solutions/2_Templates/Variadic_Templates/: AddSub.cpp  Apply.cpp  CMakeLists.txt  HigherOrder.cpp  Invoke.cpp  MakeUnique.cpp  Makefile  PackChallenges.cpp  Print.cpp  PrintTuple.cpp  Sum.cpp  VariadicAccumulate.cpp  VariadicCartesianProduct.cpp  VariadicMax.cpp  VariadicMinMax.cpp  VariantIndex.cpp
Tasks/2_Templates/Class_Templates/: FixedVector1.cpp  IsConst1.cpp  IsPointer1.cpp  RemoveConst1.cpp  UniquePtr1.cpp  Vector1.cpp  Vector2.cpp
Tasks/2_Templates/Concepts/: AssociativeContainer.cpp  CMakeLists.txt  Constraints2.cpp  IsPalindrome_Concepts.cpp  Makefile  Max_Concept.cpp  NarrowConversion2.cpp  Optional_Trivial_1.cpp  Optional_Trivial_2.cpp  PassingConcepts.cpp  SequenceContainer.cpp  Sign2.cpp  UniquePtr_Concepts.cpp
Tasks/2_Templates/Function_Templates/: Accumulate.cpp  ArraySize.cpp  CMakeLists.txt  (+7 more)
(+18 files in other folders)
